--- a/farm/src/App.css
+++ b/farm/src/App.css
@@ -28,6 +28,7 @@
   border: 4px solid #6a4d38;
   overflow: auto; 
   width: 499px;
+  height: 320px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
