--- a/farm/src/App.css
+++ b/farm/src/App.css
@@ -72,6 +72,17 @@
   border: 4px solid #6a4d38;
 }
 
+.EmptyPen {
+  position: fixed;
+  background-color: rgb(60, 186, 51);
+  width: 575px;
+  height: 774px;
+  top: 0;
+  margin-left: 513px;
+  border: 4px solid #6a4d38;
+  z-index: -1;
+}
+
 .animalData {
   width: 150px;
   height: 200px;
