--- a/farm/src/App.css
+++ b/farm/src/App.css
@@ -92,5 +92,8 @@
   position: fixed;
   margin-left: 50px;
   margin-bottom: 25px;
+  padding-left: 15px;
   z-index: 1000;
+  border: 5px;
+  border-radius: 15px;
 }
