--- a/farm/src/App.css
+++ b/farm/src/App.css
@@ -13,6 +13,7 @@
   width: 507px;
   height: 50px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 900;
   font-size: large;
   background-color: #6a4d38;
   color: #fff;
