--- a/farm/src/App.css
+++ b/farm/src/App.css
@@ -18,18 +18,22 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 900;
   font-size: large;
-  background-color: #6a4d38;
+  text-shadow: 2px 2px 0px black;
+  background-color: rgb(60, 186, 51);
   color: #fff;
   border: none;
+  border-radius: 10px;
+  margin-bottom: 5px;
 }
 
 .SQLButton:hover {
-  background-color: #553723;
+  background-color:rgb(42, 129, 35);
   cursor: pointer;
 }
 
 .resultTable {
-  border: 4px solid #6a4d38;
+  background-color: white;
+  border: 4px solid black;
   overflow: auto; 
   width: 499px;
   height: 320px;
@@ -51,7 +55,7 @@ body {
 }
 
 .resultTable tbody tr:nth-child(even) {
-  background-color: #f9f9f9; 
+  background-color: white; 
 }
 .resultTable tbody tr:nth-child(odd) {
   background-color: #d3d3d3; 
