--- a/farm/src/App.css
+++ b/farm/src/App.css
@@ -1,6 +1,7 @@
 /* App.css */
 body {
-  background-color: rgb(45, 42, 42);
+  background-color: rgb(107, 154, 198);
+  overflow: hidden;
 }
 
 .SQLBox {
@@ -24,6 +25,7 @@ body {
   border: none;
   border-radius: 10px;
   margin-bottom: 5px;
+  border: 4px solid black;
 }
 
 .SQLButton:hover {
@@ -45,11 +47,12 @@ body {
   position: absolute;
   top: 398px;
   left: 420px;
+  border: 4px solid black;
 }
 
 .ResetButton:hover {
   background-color:rgb(192, 0, 0);
-  cursor: pointer;
+  cursor: not-allowed;
 }
 
 .resultTable {
@@ -84,7 +87,7 @@ body {
 
 .farmer {
   position: fixed;
-  bottom: 20px;
+  top: 380px;
   left: 1130px;
   width: 310px;
   height: 380px;
@@ -135,7 +138,7 @@ body {
   height: 774px;
   top: 0;
   margin-left: 513px;
-  border: 6px solid #6a4d38;
+  border: 6px solid black;
 }
 
 .EmptyPen {
@@ -145,7 +148,7 @@ body {
   height: 774px;
   top: 0;
   margin-left: 513px;
-  border: 6px solid #6a4d38;
+  border: 6px solid black;
   z-index: -1;
 }
 
