--- a/farm/src/App.css
+++ b/farm/src/App.css
@@ -91,7 +91,7 @@ body {
 .farmer {
   position: fixed;
   top: 342px;
-  left: 1017px;
+  left: 1047px;
   width: 279px;
   height: 342px;
   z-index: 0;
@@ -175,4 +175,20 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  /*border: 1px solid white;*/
+}
+
+.instruction-text {
+  width: 375px;
+  height: 707px;
+  background-color: black;
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: large;
+  padding-left: 15px;
+  padding-right: 15px;
+  position: absolute;
+  left: 71%;
+  top: -3.3px;
+  z-index: -9;
 }
